# toy-gemm

./: .gitignore  CMakeLists.txt  readme.md
include/toy-gemm/: matrix.hpp
test/: CMakeLists.txt  test-ctor.cpp
